--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         }
         .all{
             display: flex;
+            width: 100%;
+            height: 100vh;
         }
         .nav{
             width: 15%;
